--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "svg-loaders-react": "^2.2.1",
-    "swr": "^0.3.4"
+    "swr": "^0.3.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-react-hooks": "^4.0.0"
   }
 }
