--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "styled-components": "^5.2.0",
     "svg-loaders-react": "^2.2.1",
     "swr": "^0.3.5"
   },
