--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "react": "16.13.1",
