--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "autoprefixer": "^10.0.0",
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
+    "postcss-import": "^12.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.2.0",
     "svg-loaders-react": "^2.2.1",
-    "swr": "^0.3.5"
+    "swr": "^0.3.5",
+    "tailwindcss": "^1.8.10"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
