--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-import": "^12.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-toastify": "^6.0.8",
     "svg-loaders-react": "^2.2.1",
     "swr": "^0.3.5",
     "tailwindcss": "^1.8.10"
