--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^10.0.0",
+    "fuse.js": "^6.2.0-beta.1",
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "postcss-import": "^12.0.1",
