--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "postcss-import": "^12.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-toastify": "^6.0.8",
-    "swr": "^0.3.5",
-    "tailwindcss": "^1.8.10"
+    "react-toastify": "^6.0.9",
+    "tailwindcss": "^1.8.10",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
