--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "js-cookie": "^2.2.1",
     "next": "9.5.3",
     "postcss-import": "^12.0.1",
+    "swr": "^0.3.5",
     "react": "16.13.1",
+    "react-datepicker": "^3.2.2",
     "react-dom": "16.13.1",
     "react-toastify": "^6.0.9",
     "tailwindcss": "^1.8.10",
