--- a/manifest/deployment.yml
+++ b/manifest/deployment.yml
@@ -23,3 +23,5 @@ spec:
         env:
         - name: NODE_ENV
           value: "production"
+      imagePullSecrets:
+      - name: my-registry-key
